# ITP-425

Basic_Compiler/: CMakeLists.txt  README.md  travis.sh
Basic_Compiler/src/: CMakeLists.txt  Node.cpp  Node.h  NodeCodeGen.cpp  Procc.y  SrcMain.cpp
DNA_global_sequence_alignment/: .clang-tidy  .gitignore  README.md
DNA_global_sequence_alignment/src/: HashTable.hpp  SrcMain.cpp  SrcMain.h
DNA_global_sequence_alignment/tests/: StudentTests.cpp
Genetic_Algorithms_ and_Functional_Programming/: README.md
Genetic_Algorithms_ and_Functional_Programming/src/: SrcMain.cpp  SrcMain.h  TSP.cpp  TSP.h
Parallelization/: .gitignore  CMakeLists.txt  README.md  travis.sh
Parallelization/input/: COVID_UK.fasta
Parallelization/sampleoutput/: COVID_reference_vs_UK_Comparison.txt
Parallelization/src/: CMakeLists.txt  DNATranslator.cpp  DNATranslator.h  FASTAParser.cpp  FASTAParser.h  NeedlemanWunschAlgorithm.cpp  NeedlemanWunschAlgorithm.h  SrcMain.cpp
Parallelization/tests/: CMakeLists.txt  StudentTests.cpp
REST_server/: README.md  results.html
REST_server/.github/workflows/: build.yml
REST_server/postman/: pa7-tests.postman_collection.json
REST_server/src/: CMakeLists.txt  IMDbExtract.cpp  IMDbExtract.h  JSONFetch.cpp  JSONFetch.h  SrcMain.cpp
RLE_compression/: README.md
RLE_compression/src/: RleData.cpp  RleFile.cpp  SrcMain.cpp
RLE_compression/tests/: StudentTests.cpp
Virtual_Machine/: .clang-tidy  README.md
Virtual_Machine/src/: Exceptions.h  Machine.cpp  Machine.h  Ops.cpp  Ops.h  Parser.hpp  SrcMain.cpp
Virtual_Machine/tests/: StudentTests.cpp
(+2 files in other folders)
